--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,13 @@
 
     <Button
         android:id="@+id/buttonBS"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="88dp"
+        android:layout_height="51dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:text="Del"
         tools:layout_editor_absoluteX="280dp"
-        tools:layout_editor_absoluteY="204dp" />
+        tools:layout_editor_absoluteY="206dp" />
 
     <TableLayout
         android:id="@+id/buttonGroup"
@@ -209,22 +207,21 @@
         android:id="@+id/result"
         android:layout_width="367dp"
         android:layout_height="103dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         android:editable="false"
         android:maxLines="1"
         android:text="0"
         android:textAlignment="textEnd"
-        app:layout_constraintBottom_toTopOf="@+id/buttonBS"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
 
-        />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonGroup"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
 
 </android.support.constraint.ConstraintLayout>
