--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,14 @@
         android:layout_height="51dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="29dp"
+        android:layout_marginTop="8dp"
         android:text="Del"
-        tools:layout_editor_absoluteX="280dp"
-        tools:layout_editor_absoluteY="206dp" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonGroup"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TableLayout
         android:id="@+id/buttonGroup"
@@ -205,8 +210,8 @@
 
     <AutoCompleteTextView
         android:id="@+id/result"
-        android:layout_width="367dp"
-        android:layout_height="103dp"
+        android:layout_width="369dp"
+        android:layout_height="134dp"
         android:editable="false"
         android:maxLines="1"
         android:text="0"
@@ -221,7 +226,10 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonGroup"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        tools:layout_editor_absoluteY="124dp"
+        app:layout_constraintVertical_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.518" />
 
 
 </android.support.constraint.ConstraintLayout>
