Added buttons SIN, COS, SQR Fixed DEL button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,34 +6,78 @@
     android:layout_height="match_parent"
     tools:context="ru.omgtu.calculator.MainActivity">
 
-    <Button
-        android:id="@+id/buttonBS"
-        android:layout_width="88dp"
-        android:layout_height="51dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="29dp"
-        android:layout_marginTop="8dp"
-        android:text="Del"
-        app:layout_constraintBottom_toTopOf="@+id/buttonGroup"
+    <AutoCompleteTextView
+        android:id="@+id/result"
+        android:layout_width="369dp"
+        android:layout_height="134dp"
+        android:editable="false"
+        android:maxLines="1"
+        android:text="0"
+        android:textAlignment="textEnd"
+
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/result"
-        app:layout_constraintVertical_bias="1.0" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonGroup"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        tools:layout_editor_absoluteY="124dp"
+        app:layout_constraintVertical_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.518" />
 
     <TableLayout
         android:id="@+id/buttonGroup"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="7dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/buttonSin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sin" />
+
+            <Button
+                android:id="@+id/buttonCos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cos" />
+
+            <Button
+                android:id="@+id/buttonSqr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="X^2" />
+
+            <Button
+                android:id="@+id/buttonBS"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:text="Del"
+                app:layout_constraintBottom_toTopOf="@+id/buttonGroup"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/result"
+                app:layout_constraintVertical_bias="0.0" />
+        </TableRow>
 
         <TableRow
             android:id="@+id/functionRow1"
@@ -207,29 +251,6 @@
         </TableRow>
 
     </TableLayout>
-
-    <AutoCompleteTextView
-        android:id="@+id/result"
-        android:layout_width="369dp"
-        android:layout_height="134dp"
-        android:editable="false"
-        android:maxLines="1"
-        android:text="0"
-        android:textAlignment="textEnd"
-
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonGroup"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        tools:layout_editor_absoluteY="124dp"
-        app:layout_constraintVertical_bias="0.502"
-        app:layout_constraintHorizontal_bias="0.518" />
 
 
 </android.support.constraint.ConstraintLayout>
