--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,8 @@
 
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:backgroundTint="@color/colorResult"
+        android:backgroundTintMode="screen"
         android:editable="false"
         android:hint="@string/number0"
         android:maxLines="2"
@@ -53,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/functionSin" />
 
             <Button
@@ -61,7 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/functionCos" />
 
             <Button
@@ -69,17 +71,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/functionSqr" />
 
             <Button
                 android:id="@+id/buttonBS"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/functionDel"
                 app:layout_constraintBottom_toTopOf="@+id/buttonGroup"
                 app:layout_constraintRight_toRightOf="parent"
@@ -98,7 +98,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/functionSqrt" />
 
             <Button
@@ -106,7 +106,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/functionOP" />
 
             <Button
@@ -114,7 +114,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/functionCP" />
 
             <Button
@@ -122,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/functionClr" />
         </TableRow>
 
@@ -136,7 +136,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/number7"
                 tools:layout_editor_absoluteX="45dp"
                 tools:layout_editor_absoluteY="220dp" />
@@ -146,7 +146,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/number8"
                 tools:layout_editor_absoluteX="147dp"
                 tools:layout_editor_absoluteY="220dp" />
@@ -156,7 +156,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/number9"
                 tools:layout_editor_absoluteX="256dp"
                 tools:layout_editor_absoluteY="220dp" />
@@ -166,7 +166,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/functionMul" />
 
         </TableRow>
@@ -181,7 +181,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/number4"
                 tools:layout_editor_absoluteX="45dp"
                 tools:layout_editor_absoluteY="156dp" />
@@ -191,7 +191,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/number5"
                 tools:layout_editor_absoluteX="147dp"
                 tools:layout_editor_absoluteY="156dp" />
@@ -201,7 +201,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/number6"
                 tools:layout_editor_absoluteX="256dp"
                 tools:layout_editor_absoluteY="156dp" />
@@ -211,7 +211,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/functionDiv" />
 
         </TableRow>
@@ -226,19 +226,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/number1"
                 tools:layout_editor_absoluteX="45dp"
-                tools:layout_editor_absoluteY="88dp" />
-
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:background="#53DF00"
-                android:text="@string/number3"
-                tools:layout_editor_absoluteX="256dp"
                 tools:layout_editor_absoluteY="88dp" />
 
             <Button
@@ -246,9 +236,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/number2"
                 tools:layout_editor_absoluteX="147dp"
+                tools:layout_editor_absoluteY="88dp" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:background="@color/colorButton"
+                android:text="@string/number3"
+                tools:layout_editor_absoluteX="256dp"
                 tools:layout_editor_absoluteY="88dp" />
 
             <Button
@@ -256,7 +256,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/functionMin" />
 
         </TableRow>
@@ -271,7 +271,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/number0" />
 
             <Button
@@ -279,7 +279,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/functionDot" />
 
             <Button
@@ -287,7 +287,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="=" />
 
             <Button
@@ -295,7 +295,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                android:background="#53DF00"
+                android:background="@color/colorButton"
                 android:text="@string/functionPlus" />
         </TableRow>
 
