--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#BA2F2F</color>
-    <color name="colorPrimaryDark">#FC3F3F</color>
+    <color name="colorPrimary">#FC3F3F</color>
+    <color name="colorPrimaryDark">#BA2F2F</color>
     <color name="colorAccent">#000000</color>
-    <color name="colorButton">#E39AA3</color>
+    <color name="colorButton">#F0929D</color>
     <color name="colorResult">#871422</color>
 </resources>
