--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,18 +7,21 @@
     tools:context="ru.omgtu.calculator.Login">
 
     <RelativeLayout
-        android:layout_width="359dp"
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
         android:layout_height="339dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.205">
 
         <EditText
             android:id="@+id/login"
@@ -27,8 +30,10 @@
             android:layout_above="@+id/password"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="22dp"
+            android:backgroundTint="@color/colorResult"
+            android:backgroundTintMode="screen"
             android:ems="10"
-            android:hint="login"
+            android:hint="@string/hintLogin"
             android:inputType="textPersonName"
             android:textAlignment="center"
             tools:layout_editor_absoluteX="117dp"
@@ -41,31 +46,55 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="85dp"
-            android:text="OK"
+            android:background="@color/colorButton"
+            android:text="@string/buttonOk"
             android:textAlignment="center" />
 
         <EditText
             android:id="@id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:height="20dp"
-            android:ems="10"
-            android:hint="password"
-            android:inputType="textPassword"
-            android:selectAllOnFocus="false"
-            android:textAlignment="center"
             android:layout_above="@+id/button"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="39dp" />
+            android:layout_marginBottom="39dp"
+            android:height="20dp"
+            android:backgroundTint="@color/colorResult"
+            android:backgroundTintMode="screen"
+            android:ems="10"
+            android:hint="@string/hintPassword"
+            android:inputType="textPassword"
+            android:selectAllOnFocus="false"
+            android:textAlignment="center" />
 
         <Button
             android:id="@+id/buttonIntent2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="18dp"
+            android:background="@color/colorButton"
+            android:text="@string/buttonGoBack"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="33dp"
-            android:text="@string/goBack" />
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/textLoginHint"
+        android:layout_width="match_parent"
+        android:layout_height="95dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:editable="false"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="@string/textLoginHintHelp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
+        app:layout_constraintVertical_bias="0.379"
+        tools:layout_editor_absoluteX="12dp"
+        tools:layout_editor_absoluteY="390dp" />
 
 </android.support.constraint.ConstraintLayout>
